# sls

./: Makefile  README.md  SLS.hs  Test.hs  nets.neato  sls.cabal
SLS/: Choice.hs  Netlist.hs
