name:    sls
version: 0.0.0

category: Hardware

synopsis: Switch (transistor) level synthesis using SMT.

description:
  TODO

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://github.com/tomahawkins/sls

build-type:    Simple
cabal-version: >= 1.6

library
    build-depends:
        base      >= 4.0     && < 5,
        mtl       >= 1.1.0.1 && < 2.1,
        yices     >= 0.0.0.7 && < 0.0.1

    exposed-modules:
        SLS

    extensions:

    ghc-options: -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/sls.git

